增加地区选择弹框样式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">JetpackDemo</string>
+
+    <string name="confirm">确定</string>
+    <string name="choose_area">选择省市区</string>
 </resources>
